# CG-2021

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  install.sh
1. Rogue-like game/: CMakeLists.txt  Doxyfile.in  README.md  install.sh
2. The witch's ball/: CMakeLists.txt  install.sh  out.ppm  render.sh
2. The witch's ball/src/: tinyraytracer.cpp
doc/html/: Image_8cpp.html  Image_8cpp__incl.dot  Image_8cpp__incl.map  Image_8cpp__incl.md5  Image_8h.html  Image_8h__dep__incl.dot  Image_8h__dep__incl.map  Image_8h__dep__incl.md5  Image_8h__incl.dot  Image_8h__incl.map  Image_8h__incl.md5  Image_8h_source.html  Player_8cpp.html  Player_8cpp__incl.dot  Player_8cpp__incl.map  Player_8cpp__incl.md5  Player_8h.html  Player_8h__dep__incl.dot  Player_8h__dep__incl.map  Player_8h__dep__incl.md5  Player_8h__incl.dot  Player_8h__incl.map  Player_8h__incl.md5  Player_8h_source.html  annotated.html  classDoorObject.html  classDoorObject__coll__graph.dot  classExitObject-members.html  classExitObject.html  classExitObject__coll__graph.dot  classExitObject__inherit__graph.dot  classFloorObject.html  classFloorObject__inherit__graph.dot  classGameObject-members.html  classGameObject.html  classGameObject__coll__graph.dot  classGameObject__inherit__graph.dot  classInventory.html  classInventory_a960fedf0a114d8085e5e3930c2696e0a_cgraph.dot  classInventory_ae94a747715bdf06cf487053bf14033d8_icgraph.dot  (+346 more)
doc/latex/: Image_8cpp.tex  Image_8cpp__incl.dot  Image_8cpp__incl.md5  Image_8h.tex  Image_8h__dep__incl.dot  Image_8h__dep__incl.md5  Image_8h__incl.dot  Image_8h__incl.md5  Player_8cpp.tex  Player_8cpp__incl.dot  Player_8cpp__incl.md5  Player_8h.tex  Player_8h__dep__incl.dot  Player_8h__dep__incl.md5  Player_8h__incl.dot  Player_8h__incl.md5  annotated.tex  classExitObject.tex  classExitObject__coll__graph.dot  classExitObject__inherit__graph.dot  classFloorObject.tex  classFloorObject__coll__graph.dot  classInventory__coll__graph.dot  classInventory_a960fedf0a114d8085e5e3930c2696e0a_cgraph.dot  classInventory_ae94a747715bdf06cf487053bf14033d8_cgraph.dot  classInventory_ae94a747715bdf06cf487053bf14033d8_icgraph.dot  classKeyObject.tex  classKeyObject__coll__graph.dot  classMainExitObject.tex  classMainExitObject__inherit__graph.dot  classMatrix.tex  classMatrix_adb9aa48f3cd88016419fc50393f86da8_icgraph.dot  classMutableGameObject__coll__graph.dot  classRoom__coll__graph.dot  classScreen__inherit__graph.dot  classStaticGameObject.tex  classStaticGameObject__coll__graph.dot  classTile_a775e32adf797e243d76ad37a3ee3d941_cgraph.dot  classTile_a775e32adf797e243d76ad37a3ee3d941_icgraph.dot  classTile_ade8c037ee27c821937829683be8d7b82_cgraph.dot  (+202 more)
inc/: Image.h  Player.h  common.h  input_processing.h  map_loader.h
inc/gameplay/: Player.h  game.h  input_processing.h  inventory.h
inc/graphics/: Image.h  screen.h  tile.h
inc/utilities/: common.h  exceptions.h  game_object.h  labirinth.h  matrix.h  room.h
res/maps/: labirinth.txt  map.txt  mapA.txt  roomA.txt  roomB.txt
src/: Image.cpp  Player.cpp  abcd.cpp  input_processing.cpp  main.cpp  map_loader.cpp
src/gameplay/: Player.cpp  game.cpp  input_processing.cpp  inventory.cpp
src/graphics/: screen.cpp  tile.cpp
src/utilities/: game_object.cpp  labirinth.cpp  (+3 more)
(+472 files in other folders)
